--- a/htmlembed/index.html
+++ b/htmlembed/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <a href="https://github.com/Awire9966/GoGaurdian-MemeGenerator">Visit the github.</a>
-     <center><textarea name="" id="url" placeholder="Put the version of Lua here."></textarea>
+     <center><textarea name="" id="vers" placeholder="Put the version of Lua here."></textarea>
          <button onclick="findlua()">Download!</button>
         
         
