--- a/htmlembed/index.html
+++ b/htmlembed/index.html
@@ -11,7 +11,7 @@
         
 </center>
 
-<script type="text/javascript" src="">
+<script type="text/javascript" src="https://luadownloadcalc.netlify.app/htmlembed/embed.js">
 </script>
     </body>
 </html>
